Refactoring: removed redundant determination of entrypoint, introduced EntryPointUtil for this purpose